Add product search and security config